--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -2,11 +2,18 @@
 ** agenda stuff
 *** writing grep variants
 **** my first attempt: /home/doom/End/Cave/DoomfileTools/bin/df_grep.raku
-*** raku classes as data containers
+*** raku classes as data containers (postponed)
 **** https://github.com/doomvox/raku-study/tree/main/bin/2021apr25/data_container_class.raku
 
 *** bruce gray rosettacode entries
 **** http://rosettacode.org/wiki/Barnsley_fern#Raku 
+
+15:22:05	 From Bruce Gray : http://rosettacode.org/wiki/Barnsley_fern#Raku
+15:25:20	 From William Michels : https://en.wikipedia.org/wiki/Affine_transformation
+15:25:47	 From William Michels : https://mathworld.wolfram.com/AffineTransformation.html
+
+
+
 **** http://rosettacode.org/wiki/Coprime_triplets#Raku
 **** https://rosettacode.org/wiki/Tree_from_nesting_levels#Raku 
 
