--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -1,7 +1,7 @@
 * meeting notes May 16, 2021
 ** subjects discussed 
 *** richard hainsworth reports in on the documentation system work
-**** current discussion: static html vs dynamic database-backed system
+**** current issue: static html vs dynamic database-backed system
 
 *** writing grep variants
 **** my first attempt: /home/doom/End/Cave/DoomfileTools/bin/df_grep.raku
