--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -3,6 +3,10 @@
 *** richard hainsworth reports in on the documentation system work
 **** current issue: static html vs dynamic database-backed system
 
+**** a raku documentation mailing list, created by lizmat
+***** documentation@raku.org
+***** (don't know how to subscribe, or if it's archived somewhere)
+
 *** writing grep variants
 **** my first attempt: /home/doom/End/Cave/DoomfileTools/bin/df_grep.raku
 *** raku classes as data containers (postponed)
@@ -142,9 +146,6 @@ off-weeks.  david christensen is interested.
 
 *** perl5 cpan module  Filesys::ZFS, david christensen says "not complete"
 
-*** there's a raku documentation mailing list, created by lizmat
-**** Richard Hainsworth : documentation@raku.org
-**** don't know how to subscribe, or if it's archived somewhere
 
 https://github.com/Raku/Raku-Steering-Council/blob/main/announcements/20200720.md
 
