--- a/notes/meeting_2021may30.org
+++ b/notes/meeting_2021may30.org
@@ -3,3 +3,11 @@
 *** raku classes as data containers (postponed) (joe brenner) 
 **** https://github.com/doomvox/raku-study/tree/main/bin/2021apr25/data_container_class.raku
 *** find/grep variants in raku revisited (joe brenner)
+
+*** bruce gray rosettacode
+**** http://rosettacode.org/wiki/Coprime_triplets#Raku
+**** https://rosettacode.org/wiki/Tree_from_nesting_levels#Raku 
+
+*** argument passing signatures (joe brenner)
+**** /home/doom/End/Cave/Ice/Xtal/Perl6/passing_args.org
+**** /home/doom/End/Cave/Perl6/Wall/raku-study/bin/2021may02/mixing_named_args_and_positional_ones.raku
