--- a/notes/meeting_2021may30.org
+++ b/notes/meeting_2021may30.org
@@ -11,3 +11,12 @@
 *** argument passing signatures (joe brenner)
 **** /home/doom/End/Cave/Ice/Xtal/Perl6/passing_args.org
 **** /home/doom/End/Cave/Perl6/Wall/raku-study/bin/2021may02/mixing_named_args_and_positional_ones.raku
+
+*** super flat (postponed)
+**** https://stackoverflow.com/questions/67515479/what-is-a-simple-and-elegant-way-to-flatten-lists-or-arrays-of-arbitrary-depths
+**** https://stackoverflow.com/questions/41648119/how-can-i-completely-flatten-a-list-of-lists-of-lists
+**** https://en.wikipedia.org/wiki/Superflat
+**** a job for flat? (b.g. suggest just usine none)
+***** https://stackoverflow.com/questions/67373726/why-are-empty-raku-shaped-arrays-truthy
+"As a follow up, I wonder if a good way to test 'all elements are undefined' is @shaped-array.any.so ???"
+
