--- a/notes/meeting_2021may30.org
+++ b/notes/meeting_2021may30.org
@@ -12,7 +12,7 @@
 **** /home/doom/End/Cave/Ice/Xtal/Perl6/passing_args.org
 **** /home/doom/End/Cave/Perl6/Wall/raku-study/bin/2021may02/mixing_named_args_and_positional_ones.raku
 
-*** super flat (postponed)
+*** super flat 
 **** https://stackoverflow.com/questions/67515479/what-is-a-simple-and-elegant-way-to-flatten-lists-or-arrays-of-arbitrary-depths
 **** https://stackoverflow.com/questions/41648119/how-can-i-completely-flatten-a-list-of-lists-of-lists
 **** https://en.wikipedia.org/wiki/Superflat
@@ -22,7 +22,7 @@
 
 ****** (b.g. suggest just usine none)
 
-*** type system: what is accepted by what   (postponed)
+*** type system: what is accepted by what   
 **** is anything ever cast automatically
 ***** when can you Cool
 
