--- a/notes/meeting_2021may30.org
+++ b/notes/meeting_2021may30.org
@@ -20,7 +20,7 @@
 ***** https://stackoverflow.com/questions/67373726/why-are-empty-raku-shaped-arrays-truthy
 "As a follow up, I wonder if a good way to test 'all elements are undefined' is @shaped-array.any.so ???"
 
-****** bruce gray suggests just using none)
+****** bruce gray suggests just using none:
 #+BEGIN_SRC perl6
     my @a =   Any xx 3;
     my @b = |(Any xx 2), 0;
