--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -29,9 +29,11 @@
 **** https://stackoverflow.com/questions/67515479/what-is-a-simple-and-elegant-way-to-flatten-lists-or-arrays-of-arbitrary-depths
 **** https://stackoverflow.com/questions/41648119/how-can-i-completely-flatten-a-list-of-lists-of-lists
 **** https://en.wikipedia.org/wiki/Superflat
-**** a job for flat?
+
+
 ***** https://stackoverflow.com/questions/67373726/why-are-empty-raku-shaped-arrays-truthy
 "As a follow up, I wonder if a good way to test 'all elements are undefined' is @shaped-array.any.so ???"
+****** I thought: "a job for flat?"
 ****** bruce gray suggests just using none:
 #+BEGIN_SRC perl6
     my @a =   Any xx 3;
