--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -11,8 +11,8 @@
 ***** impedance mismatch between oop and File::Find's wanted
 ****** how to pass args to wanted?
 ****** bruce gray suggests an anonymous sub with a closure
-**** discussed an odd go round with
-***** synopsis from an out-of-date version of File::Find
+**** raku version got hung up
+***** mis-reading an error message from trying the first line of a synopsis from an out-of-date version of File::Find
 
 
 *** bruce gray discussed a rosettacode entry
