--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -13,6 +13,8 @@
 ****** bruce gray suggests an anonymous sub with a closure
 **** raku version got hung up
 ***** mis-reading an error message from trying the first line of a synopsis from an out-of-date version of File::Find
+****** bruce gray explains the old form (using a binding operator) was once the way to preserve laziness.
+
 
 *** bruce gray discussed a rosettacode entry
 **** http://rosettacode.org/wiki/Barnsley_fern#Raku 
