--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -134,7 +134,8 @@ https://www.nntp.perl.org/group/perl.perl6.users/
 ** bits
 
 *** bg summarizes
-fosdem codesection langs for opensource  corporate backed typescript go java
+fosdem codesection langs for opensource  
+corporate backed typescript go java
 raku optimized in other ways
 
 *** announced: going to skip next sunday, thinking about going with every-other week format
