--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -146,7 +146,7 @@ https://www.nntp.perl.org/group/perl.perl6.users/
 *** perl5 cpan module  Filesys::ZFS, david christensen says "not complete"
 https://github.com/Raku/Raku-Steering-Council/blob/main/announcements/20200720.md
 
-*** steve yegge, a fascinating perl hater:
+*** steve yegge, a fascinating perl hater
 https://steve-yegge.blogspot.com/
 
 **** Bruce Gray : "For most people the perceived usefulness of a computer language is inversely proportional to the number of theoretical axes the language intends to grind."  -- Larry Wall
