--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -139,9 +139,6 @@ https://www.nntp.perl.org/group/perl.perl6.users/
 ***** corporate backed: typescript, go, java
 ***** raku optimized in other ways
 
-*** announcement: going to skip next sunday, thinking about going with every-other week format
-**** suggestion: have someone else host perl5 meetings on the off-weeks.  
-**** david christensen is interested
 
 *** perl5 cpan module  Filesys::ZFS, david christensen says "not complete"
 https://github.com/Raku/Raku-Steering-Council/blob/main/announcements/20200720.md
@@ -153,4 +150,8 @@ https://steve-yegge.blogspot.com/
 
 *** a defense of perl/raku talk
 
+
+
+** announcements
+*** going to skip next sunday, thinking about going with every-other week format
 
