--- a/notes/meeting_2021may16.org
+++ b/notes/meeting_2021may16.org
@@ -154,4 +154,4 @@ https://steve-yegge.blogspot.com/
 
 ** announcements
 *** going to skip next sunday, thinking about going with every-other week format
-
+*** next meeting may 30, 2021
