--- a/notes/meeting_2021may30.org
+++ b/notes/meeting_2021may30.org
@@ -1,6 +1,6 @@
 * meeting notes May 16, 2021
 ** agenda
-*** raku classes as data containers (postponed) (joe brenner) 
+*** raku classes as data containers (joe brenner) 
 **** https://github.com/doomvox/raku-study/tree/main/bin/2021apr25/data_container_class.raku
 *** find/grep variants in raku revisited (joe brenner)
 
