--- a/notes/meeting_2021may30.org
+++ b/notes/meeting_2021may30.org
@@ -23,6 +23,9 @@
 
 *** go through my perl5 templates: how much is core raku now?
 
+*** raku die handlers vs perl5
+
+
 ** appendix: the usual links
 *** code examples
 https://github.com/doomvox/raku-study/tree/main/bin/2021may30
