--- a/notes/meeting_2021may30.org
+++ b/notes/meeting_2021may30.org
@@ -24,6 +24,9 @@
 *** go through my perl5 templates: how much is core raku now?
 
 *** raku die handlers vs perl5
+*** raku idioms
+**** https://github.com/doomvox/raku-study/blob/main/notes/idioms.org
+
 
 
 ** appendix: the usual links
