--- a/notes/meeting_2021may30.org
+++ b/notes/meeting_2021may30.org
@@ -1,5 +1,5 @@
 * meeting notes May 16, 2021
-** agenda
+** topic ideas
 *** raku classes as data containers (joe brenner) 
 **** https://github.com/doomvox/raku-study/tree/main/bin/2021apr25/data_container_class.raku
 *** find/grep variants in raku revisited (joe brenner)
