--- a/notes/69cent_tour_git.org
+++ b/notes/69cent_tour_git.org
@@ -104,7 +104,7 @@ See: /home/doom/End/Cave/Ice/Xtal/Git/github.org
 **** git branch
 **** github pull request
 https://docs.github.com/en/github/collaborating-with-issues-and-pull-requests/about-pull-requests
-**** things you might read about branches and such
+**** stuff to read
 ***** "Pro Git" by Scott Chacon and  Ben Straub
 ****** http://git-scm.com/book/en/v2/Git-Branching-Basic-Branching-and-Merging
 ****** Can read on-line, can get hardcopy from (spit) Amazon
