--- a/notes/meeting_2021may30.org
+++ b/notes/meeting_2021may30.org
@@ -1,6 +1,6 @@
 * meeting notes May 16, 2021
 ** secret plan
-***   
+*** /home/doom/lib/emacs/slip-and-slide.el
 |-------+---------------|
 | M-o j | jump-to-slide |
 | M-o n | jump-to-next  |
