--- a/notes/meeting_2021may30.org
+++ b/notes/meeting_2021may30.org
@@ -9,7 +9,7 @@
 
 *** bruce gray tried to answer a question about "commutative" pattern matching:
 https://www.nntp.perl.org/group/perl.perl6.users/2021/05/msg9958.html
-**** I was once playing with doing this with conjunctions
+**** I was once playing with doing this with regex conjunctions
 https://www.nntp.perl.org/group/perl.perl6.users/2020/05/msg8512.html
 
 
