--- a/notes/meeting_2021may30.org
+++ b/notes/meeting_2021may30.org
@@ -12,8 +12,15 @@
 **** an issue I just stumbled over: can you pass a junction as an argument:
 ***** https://www.nntp.perl.org/group/perl.perl6.users/2021/05/msg9917.html
 
+
+*** finished that special purpose find/grep script:
+/home/doom/End/Cave/DoomfileTools/bin/df_grep.raku
+
+
 *** raku's perl5 regex compatibility (:P5) is limited
 **** https://www.nntp.perl.org/group/perl.perl6.users/2021/05/msg9924.html
+
+
 
 *** "commutative" pattern matching:
 **** bruce gray tried to answer a (murky) question:
