--- a/notes/meeting_2021may30.org
+++ b/notes/meeting_2021may30.org
@@ -15,9 +15,8 @@
 
 *** finished that special purpose find/grep script:
 /home/doom/End/Cave/DoomfileTools/bin/df_grep.raku
-
-*** raku's perl5 regex compatibility (:P5) is limited
-**** https://www.nntp.perl.org/group/perl.perl6.users/2021/05/msg9924.html
+**** raku's perl5 regex compatibility (:P5) is limited
+***** https://www.nntp.perl.org/group/perl.perl6.users/2021/05/msg9924.html
 
 
 
