--- a/notes/meeting_2021may30.org
+++ b/notes/meeting_2021may30.org
@@ -26,6 +26,9 @@
 ****** https://www.nntp.perl.org/group/perl.perl6.users/2020/05/msg8512.html
 ***** a good solution from peter penchev: multiple overlapping zero-width "before" matches
 
+*** perl5-porters list: got involved with arguing about line trimming
+
+
 ** other topic ideas
 *** raku classes as data containers (joe brenner) 
 **** https://github.com/doomvox/raku-study/tree/main/bin/2021may16/data_container_class_iii.raku
