--- a/notes/meeting_2021may30.org
+++ b/notes/meeting_2021may30.org
@@ -16,6 +16,7 @@
 /home/doom/End/Cave/DoomfileTools/bin/df_grep.raku
 **** raku's perl5 regex compatibility (:P5) is limited
 ***** https://www.nntp.perl.org/group/perl.perl6.users/2021/05/msg9924.html
+**** importing perl5 defintions: ended up shelling out to a perl5 one-liner
 
 *** "commutative" pattern matching:
 **** bruce gray tried to answer a (murky) question:
