--- a/notes/meeting_2021may30.org
+++ b/notes/meeting_2021may30.org
@@ -14,7 +14,7 @@
 
 *** finished that special purpose find/grep script:
 /home/doom/End/Cave/DoomfileTools/bin/df_grep.raku
-**** stumbled across behavior of passing a junction to exclude
+**** stumbled across odd behavior when passing a junction to exclude
 **** importing perl5 defintions: ended up shelling out to a perl5 one-liner
 **** raku's perl5 regex compatibility (:P5) is limited
 ***** https://www.nntp.perl.org/group/perl.perl6.users/2021/05/msg9924.html
