--- a/notes/meeting_2021may30.org
+++ b/notes/meeting_2021may30.org
@@ -12,8 +12,7 @@
 
 *** finished that special purpose find/grep script:
 /home/doom/End/Cave/DoomfileTools/bin/df_grep.raku
-**** stumbled across odd behavior when passing a junction to exclude
-***** an issue I just stumbled over: can you pass a junction as an argument:
+**** an issue I just stumbled over: can you pass a junction as an argument:
 ***** https://www.nntp.perl.org/group/perl.perl6.users/2021/05/msg9917.html
 
 **** importing perl5 defintions: ended up shelling out to a perl5 one-liner
