--- a/notes/meeting_2021may30.org
+++ b/notes/meeting_2021may30.org
@@ -78,6 +78,6 @@ https://www.nntp.perl.org/group/perl.perl6.users/
 ** announcments
 *** next meeting: June 16th
 
-*** mail "subscribe" to documentation@raku.org
+*** mail "SUBSCRIBE" to documentation@raku.org
 **** maybe it'll work
 
