--- a/notes/meeting_2021may30.org
+++ b/notes/meeting_2021may30.org
@@ -3,7 +3,7 @@
 *** bill: weirdness on if/else vs ternary 
 *** bruce gray
 **** rosetta code
-**** sorting and comparators
+**** sorting and comparators documentation
 *** junctions
 **** basics (we've talked about them before)
 ***** /home/doom/End/Cave/Perl6/Wall/raku-study/notes/junctions
