--- a/notes/meeting_2021jun16.org
+++ b/notes/meeting_2021jun16.org
@@ -1,5 +1,7 @@
 * meeting notes June 16, 2021
-** secret plan
+** and now, for something completely different
+
+** minutes of last meeting
 *** bill: weirdness on if/else vs ternary
 **** https://github.com/doomvox/raku-study/tree/main/bin/2021may30/bills_experiments_if_vs_ternary.raku
 *** bruce gray
