--- a/notes/meeting_2021may30.org
+++ b/notes/meeting_2021may30.org
@@ -79,7 +79,7 @@ http://sf.pm.org/
 https://www.nntp.perl.org/group/perl.perl6.users/
 
 ** announcments
-*** next meeting: June 16th
+*** next meeting: June 13th, Sunday, right after the conference in the clouds (um)
 
 *** mail "SUBSCRIBE" to documentation@raku.org
 **** maybe it'll work
