--- a/notes/meeting_2021may30.org
+++ b/notes/meeting_2021may30.org
@@ -18,7 +18,7 @@
 
 *** finished that special purpose find/grep script:
 /home/doom/End/Cave/DoomfileTools/bin/df_grep.raku
-**** issue I just stumbled over: can you pass a junction as an argument (File::Find exclude):
+**** issue I stumbled over: can you pass a junction as an argument (File::Find exclude):
 ***** https://www.nntp.perl.org/group/perl.perl6.users/2021/05/msg9917.html
 ***** https://github.com/doomvox/raku-study/tree/main/bin/2021may30/file_find_with_junction_as_exclude.raku
 
