--- a/notes/meeting_2021jun13.org
+++ b/notes/meeting_2021jun13.org
@@ -1,6 +1,6 @@
 * meeting notes June 20, 2021
 ** and now, for something completely different
-
+*** note to self: you can't look for raku modules with file system searches.
 *** TODO is it possible to just mail "SUBSCRIBE" to documentation@raku.org
 
 ** from the last meeting
