--- a/notes/meeting_2021may30.org
+++ b/notes/meeting_2021may30.org
@@ -83,7 +83,7 @@ http://sf.pm.org/
 https://www.nntp.perl.org/group/perl.perl6.users/
 
 ** announcments
-*** next meeting: June 20th, Sunday, right after the conference in the clouds (um)
+*** next meeting: June 20th, Sunday, so not *immediately* after the conference
 
 *** mail "SUBSCRIBE" to documentation@raku.org
 **** maybe it'll work
